--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
-	<title>Projeto 05</title>
+	<title>car_commercer</title>
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	
@@ -63,7 +63,7 @@
 		<div class="info-carro">
 		<h2>Volkswage Karmann-ghia</h2>
 		<p>1.6 8v, Gasolina, 2p, Manual 1969</p>
-		<a href="">mais detalhes</a>
+		<a  class="btn1" href="">mais detalhes</a>
 	</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 	</div><!--container-->
@@ -73,7 +73,7 @@
 		<div class="info-carro">
 		<h2>Volkswage Karmann-ghia</h2>
 		<p>1.6 8v, Gasolina, 2p, Manual 1969</p>
-		<a href="">mais detalhes</a>
+		<a class="btn1" href="">mais detalhes</a>
 	</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 	</div><!--container-->
@@ -83,7 +83,7 @@
 		<div class="info-carro">
 		<h2>Volkswage Karmann-ghia</h2>
 		<p>1.6 8v, Gasolina, 2p, Manual 1969</p>
-		<a href="">mais detalhes</a>
+		<a class="btn1" href="">mais detalhes</a>
 	</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 	<div class="clear"></div>
@@ -97,11 +97,25 @@
 			<li>Compra</li>
 			<li>Venda</li>
 			<li>Consultoria</li>
+			<li>Consultoria de Veículos</li>
+			<li>Indicação e Meânicos e Peças</li>
 		</ul>
-		<a href="">Saiba Mais</a>
+		<a class="btn1" href="">Saiba Mais</a>
 	</div><!--half1-wrapper-->
 	</div><!--half1-->
-	<div class="clear"></div>
+	<div class="half2">
+		<h2>Depoimentos</h2>
+		<div class="depoimento-single">
+			<p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque perspiciatis maiores atque aperiam voluptates reprehenderit eaque totam! Veniam perferendis ut ipsam eaque reiciendis possimus incidunt corporis alias, quidem dolores fuga."</p>
+		</div>
+		<div class="navigation">
+			<div class="arrows">
+				<img src="/imagens/arrow-left.png" alt="arrow-left">
+				<img src="./imagens/arrow-right.png" alt="arrow-right">
+			</div>
+			<div class="nome-depoimento">"João da Silva"</div><!--nome-depoimento-->
+		</div>	
+	</div><!--half2-->
 </section><!--servicos-dercricao-->
 
 </body>
