--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 	<title>car_commercer</title>
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	
-
 </head>
 <body>
 
@@ -16,23 +14,23 @@
 
 	<div class="container">
 	<div class="logo">
-		<img src="imagens/logo.jpg"/>
+		<img src="imagens/logo.jpg" />
 	</div><!--logo-->
 
 	<nav class="desktop">
 		<ul>
-			<li><a style="color:#EB2D2D;" href="">Home</a></li>
-			<li><a href="">Venda</a></li>
-			<li><a href="">Sobre</a></li>
+			<li><a style="color:#EB2D2D;" href="index.html">Home</a></li>
+			<li><a href="venda.html">Venda</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
 			<li><a href="">Contato</a></li>
 		</ul>
 	</nav><!--desktop-->
 
 	<nav class="mobile">
 		<ul>
-			<li><a style="color:#EB2D2D;" href="">Home</a></li>
-			<li><a href="">Venda</a></li>
-			<li><a href="">Sobre</a></li>
+			<li><a style="color:#EB2D2D;" href="index.html">Home</a></li>
+			<li><a href="venda.html">Venda</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
 			<li><a href="">Contato</a></li>
 		</ul>
 	</nav><!--mobile-->
@@ -57,66 +55,116 @@
 		<div class="ln1"></div>
 		<h2>Veículos em destaque</h2>
 	</div><!--line-titulo-->
-<div class="container">
+	<div class="container">
 	<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');"class="carro-img"></div>
+		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
 		<div class="info-carro">
-		<h2>Volkswage Karmann-ghia</h2>
-		<p>1.6 8v, Gasolina, 2p, Manual 1969</p>
-		<a  class="btn1" href="">mais detalhes</a>
-	</div><!--info-carro-->
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="">Mais Detalhes</a>
+		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
-	</div><!--container-->
-<div class="container">
+
 	<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');"class="carro-img"></div>
+		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
 		<div class="info-carro">
-		<h2>Volkswage Karmann-ghia</h2>
-		<p>1.6 8v, Gasolina, 2p, Manual 1969</p>
-		<a class="btn1" href="">mais detalhes</a>
-	</div><!--info-carro-->
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="">Mais Detalhes</a>
+		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
-	</div><!--container-->
-<div class="container">
+
 	<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');"class="carro-img"></div>
+		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
 		<div class="info-carro">
-		<h2>Volkswage Karmann-ghia</h2>
-		<p>1.6 8v, Gasolina, 2p, Manual 1969</p>
-		<a class="btn1" href="">mais detalhes</a>
-	</div><!--info-carro-->
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="">Mais Detalhes</a>
+		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 	<div class="clear"></div>
 	</div><!--container-->
 </section><!--veiculos-destaque-->
-<section class="servicos-descricao container">
+
+<section class="servicos-descricao">
 	<div class="half1">
-		<div class="half1-wrapper">
+		<div class="half1-wraper">
 		<h2>Serviços</h2>
 		<ul>
 			<li>Compra</li>
 			<li>Venda</li>
-			<li>Consultoria</li>
-			<li>Consultoria de Veículos</li>
-			<li>Indicação e Meânicos e Peças</li>
+			<li>Consultoria de veículos</li>
+			<li>Indicação de Mecânicos e peças</li>
 		</ul>
-		<a class="btn1" href="">Saiba Mais</a>
-	</div><!--half1-wrapper-->
-	</div><!--half1-->
+		<a class="btn1" href="">Saiba mais</a>
+		</div>
+	</div><!--half-1-->
+
 	<div class="half2">
+
 		<h2>Depoimentos</h2>
 		<div class="depoimento-single">
-			<p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque perspiciatis maiores atque aperiam voluptates reprehenderit eaque totam! Veniam perferendis ut ipsam eaque reiciendis possimus incidunt corporis alias, quidem dolores fuga."</p>
-		</div>
-		<div class="navigation">
-			<div class="arrows">
-				<img src="/imagens/arrow-left.png" alt="arrow-left">
-				<img src="./imagens/arrow-right.png" alt="arrow-right">
-			</div>
-			<div class="nome-depoimento">"João da Silva"</div><!--nome-depoimento-->
-		</div>	
+			<p>“O Rafael foi muito atencioso, me buscou no aeroporto
+			e garantiu toda comodidade e conforto no almoço, no transfer, na visita ao veículo e durante o test-drive”</p>
+			<div class="navigation">
+				<div class="arrows">
+					<img src="imagens/arrow-left.png" />
+					<img src="imagens/arrow-right.png" />
+				</div><!--arrows-->
+				<div class="nome-depoimento">João da silva</div>
+			</div><!--navigation-->
+		</div><!--depoimento-single-->
 	</div><!--half2-->
-</section><!--servicos-dercricao-->
+
+</section><!--servicos-descricao-->
+
+<section class="contato">
+	<div class="line-titulo">
+		<div class="ln1"></div>
+		<h2>Contato</h2>
+	</div><!--line-titulo-->
+
+	<form>
+		<div class="input-wraper w100">
+			<input placeholder="Nome*" type="text" required />
+		</div><!--input-wraper-->
+
+		<div class="input-wraper w50">
+			<input placeholder="E-mail*" type="text" required />
+		</div><!--input-wraper-->
+
+		<div class="input-wraper w50">
+			<input placeholder="Telefone*" type="text" required />
+		</div><!--input-wraper-->
+
+		<div class="input-wraper w100">
+			<textarea placeholder="Mensagem*" required></textarea>
+		</div><!--input-wraper-->
+
+		<div class="input-wraper w100">
+			<input class="btn1" type="submit" value="Enviar" />
+		</div><!--input-wraper-->
+
+		<div class="clear"></div><!--clear-->
+
+	</form>
+
+</section><!--contato-->
+
+<footer>
+	<div class="container">
+	<nav>
+		<ul>
+			<li><a style="color:#EB2D2D;" href="index.html">Home</a></li>
+			<li><a href="venda.html">Venda</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
+			<li><a href="">Contato</a></li>
+		</ul>
+	</nav>
+	<p>Todos os direitos reservados</p>
+	<div class="clear"></div>
+	</div><!--container-->
+</footer>
 
 </body>
 </html>
